#43 build script scss to css file

--- a/full-stack-army/dse/scss/src/foundation/_variables.scss
+++ b/full-stack-army/dse/scss/src/foundation/_variables.scss
@@ -30,22 +30,24 @@
 =            Colors            =
 =============================================*/
 
+/* Brand Color */
 
-/* Brand colors */
-
-$green: #5ECE7B;
-$green-light: #9EE2B0;
+$green: #5ece7b;
+$green-light: #9ee2b0;
 
 $dark: #1d1f22;
-$green-light: #737680;
+$dark-light: #737680;
 
-/* Neutral colors */
+/* Neutral Colors */
 
 $gray: #a3a5ad;
 $gray-light: #bebfc4;
 
+$white: #fff;
+$white-dark: #f1f2f3;
 
-/* Utility colors */
+/* Utility Colors */
+
 $red: #d12727;
 $red-light: #f8dedf;
 
